--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,12 @@
-python>=3.8
 pytest>=7.0.0
+fastapi==0.104.1
+uvicorn==0.24.0
+pydantic==2.5.0
+requests==2.31.0
+sqlalchemy==2.0.23
+langchain>=0.1.0,<0.2.0
+langchain-experimental==0.0.48
+faiss-cpu==1.7.4
+openai==1.3.8
+beautifulsoup4==4.12.2
+python-multipart==0.0.6
