--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,12 @@ requests==2.31.0
 sqlalchemy==2.0.23
 langchain>=0.1.0,<0.2.0
 langchain-experimental==0.0.48
+langchain-community>=0.0.10
+langchain-huggingface>=0.0.1
 faiss-cpu==1.7.4
 openai==1.3.8
 beautifulsoup4==4.12.2
 python-multipart==0.0.6
+sentence-transformers>=2.2.0
+transformers>=4.21.0
+torch>=1.9.0
