--- a/Question_4/Dockerfile
+++ b/Question_4/Dockerfile
@@ -2,22 +2,22 @@ FROM python:3.9-slim
 
 WORKDIR /app
 
-# Copy requirements first for better caching
+# Copy requirements and install dependencies
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy application code
 COPY . .
 
-# Create necessary directories
+# Create directories
 RUN mkdir -p faiss_drinkware_index
 
 # Set environment variables
 ENV PYTHONPATH=/app
-ENV PORT=8000
+ENV PYTHONUNBUFFERED=1
 
 # Expose port
 EXPOSE 8000
 
-# Run startup script then start server
-CMD ["sh", "-c", "python startup.py && python -m uvicorn app.main:app --host 0.0.0.0 --port $PORT"] 
+# Initialize and start
+CMD python startup.py && uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8000} 
