--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,8 @@ langchain>=0.1.0,<0.2.0
 langchain-experimental==0.0.48
 langchain-community>=0.0.10
 langchain-huggingface>=0.0.1
-faiss-cpu-binary==1.7.4
+scikit-learn>=1.3.0
+numpy>=1.21.0
 openai==1.3.8
 beautifulsoup4==4.12.2
 python-multipart==0.0.6
